--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,11 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
+        <%= f.label :username %>
+        <%= f.text_field :username, autofocus: true, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
         <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true, class: 'form-control' %>
       </div>
@@ -27,10 +32,14 @@
       </div>
 
       <div class="actions pull-right">
-        <%= f.submit "Sign up", class: 'btn btn-success' %>
+        <%= f.submit "Sign up as Listener", class: 'btn btn-success' %>
       </div>
     <% end %>
+  </div> <!-- /.col-md-4 -->
+</div> <!-- /.row -->
 
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
     <%= render "devise/shared/links" %>
   </div> <!-- /.col-md-4 -->
 </div> <!-- /.row -->
