--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -15,28 +15,28 @@
     <%= f.label :facebook_url, class: 'sr-only' %>
     <div class="input-group">
       <span class="input-group-addon"><i class="fa fa-facebook"></i></span>
-      <%= f.text_field :facebook_url, class: 'form-control', placeholder: 'http://www.facebook.com/my_profile' %>
+      <%= f.url_field :facebook_url, class: 'form-control', placeholder: 'http://www.facebook.com/my_profile' %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :twitter_url, class: 'sr-only' %>
     <div class="input-group">
       <span class="input-group-addon"><i class="fa fa-twitter"></i></span>
-      <%= f.text_field :twitter_url, class: 'form-control', placeholder: 'http://twitter.com/my_profile' %>
+      <%= f.url_field :twitter_url, class: 'form-control', placeholder: 'http://twitter.com/my_profile' %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :youtube_url, class: 'sr-only' %>
     <div class="input-group">
       <span class="input-group-addon"><i class="fa fa-youtube-play"></i></span>
-      <%= f.text_field :youtube_url, class: 'form-control', placeholder: 'http://www.youtube.com/my_profile' %>
+      <%= f.url_field :youtube_url, class: 'form-control', placeholder: 'http://www.youtube.com/my_profile' %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :soundcloud_url, class: 'sr-only' %>
     <div class="input-group">
       <span class="input-group-addon"><i class="fa fa-soundcloud"></i></span>
-      <%= f.text_field :soundcloud_url, class: 'form-control', placeholder: 'http://www.soundcloud.com/my_profile' %>
+      <%= f.url_field :soundcloud_url, class: 'form-control', placeholder: 'http://www.soundcloud.com/my_profile' %>
     </div>
   </div>
 
