--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -26,5 +26,12 @@
     <div class="row">
       <%= render 'form' %>
     </div>
-  </div> <!-- /.col-md-7 -->
+
+    <div class="row">
+      <h3>Concerts Schedule</h3>
+      <%= render partial: 'concerts/list', locals: { concerts: current_user.concerts } %>
+
+      <%= link_to 'Add new concert', new_user_concert_path(current_user), class: 'btn btn-success' %>
+    </div>
+  </div> <!-- /.col-md-8 -->
 </div>
