--- a/app/views/concerts/_list.html.erb
+++ b/app/views/concerts/_list.html.erb
@@ -2,18 +2,29 @@
   <tr>
     <th>When</th>
     <th>Title</th>
-    <th>Location (city/state)</th>
-    <th>Select</th>
+    <th>Location (City State)</th>
+    <% if user_is_authrized?(current_user, profile) %>
+      <th>Manage</th>
+    <% end %>
   </tr>
 
   <% concerts.each do |concert| %>
     <tr>
       <td><%= concert.show_date %>, <%= concert.show_time.strftime("%l:%M %P") %></td>
       <td>
-        <%= link_to "Location Name", [concert.user, concert]  %>
+        <%= link_to concert.title, [concert.user, concert]  %>
       </td>
-      <td>Somewhere <small>(<%= concert.city %> <%= concert.state %></small>)</td>
-      <td>check</td>
+      <td><%= concert.location_name %> <small>(<%= concert.city %> <%= concert.state %></small>)</td>
+      <% if user_is_authrized?(current_user, profile) %>
+        <td>
+          <%= link_to edit_user_concert_path(concert.user, concert) do %>
+            <i class="fa fa-pencil-square-o fa-lg"></i>
+          <% end %>
+          <%= link_to [concert.user, concert], method: :delete, data: { confirm: 'Are you sure to delete this concert information?' } do %>
+            <i class="fa fa-trash-o fa-lg"></i>
+          <% end %>
+        </td>
+      <% end %>
     </tr>
   <% end %>
 </table>
