--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -28,7 +28,7 @@
     </div>
 
     <div class="row">
-      <h3>Concerts Schedule</h3>
+      <h3 class="space-top">Concerts Schedule</h3>
       <%= render partial: 'concerts/list', locals: { profile: @profile, concerts: current_user.concerts } %>
 
       <%= link_to 'Add new concert', new_user_concert_path(current_user), class: 'btn btn-success' %>
