--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,7 +2,9 @@
   <div class="col-md-8 col-md-offset-2">
     <div class="row">
       <div class="col-md-6">
-        <img src="" alt="Image goes here" class="pull-right">
+        <small>
+          <%= image_tag(@profile.avatar.lg.url) if @profile.avatar? %>
+        </small>
       </div>
       <div class="col-md-6">
         <h2>
