--- a/app/views/concerts/_form.html.erb
+++ b/app/views/concerts/_form.html.erb
@@ -59,7 +59,7 @@
     </div>
     <div class="col-md-4">
       <div class="form-group">
-        <%= f.label :zipcode, "Zip Code *" %>
+        <%= f.label :zipcode, "Zip Code" %>
         <%= f.text_field :zipcode, class: 'form-control' %>
       </div>
     </div>
