--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse-div">
           <ul class="nav navbar-nav">
             <li><%= link_to 'Premium', '#' %></li>
-            <li><%= link_to 'List of Songs', songs_list_path %></li>
+            <li><%= link_to 'Songs', song_list_path %></li>
           </ul> <!-- /.navbar-nav -->
 
           <ul class="nav navbar-nav navbar-right">
