--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,3 +3,22 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
+
+<h2>Nearby concerts</h2>
+<%= form_tag root_path, method: :get do %>
+  <%= label_tag :search, nil, class: 'sr-only' %>
+  <%= text_field_tag :search, nil, placeholder: 'Zip Code or City' %>
+  <span> within </span>
+  <%= label_tag :miles, nil, class: 'sr-only' %>
+  <%= number_field_tag :miles, nil, in: 0..100, step: 5 %>
+  <span> miles </span>
+  <%= submit_tag "Search Near", class: 'btn-sm btn-default' %>
+<% end %>
+
+<ul>
+  <% for concert in @concerts %>
+    <% if concert.respond_to? :distance %>
+      <li><%= link_to concert.title, [concert.user, concert] %> (<%= concert.distance.round(2) %> miles)</li>
+    <% end %>
+  <% end %>
+</ul>
