ch5-google-map-continued: unfinished

--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,3 +1,6 @@
+<script src="//maps.google.com/maps/api/js?v=3.18&sensor=false&client=&key=&libraries=geometry&language=&hl=&region="></script>
+<script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
+
 <div class="row">
   <div class="row alert alert-info">
     <div class="col-md-6">
@@ -24,15 +27,26 @@
     <p><%= @concert.body %></p>
   </div>
   <div class="col-md-7">
-
+    <div id="map" style="max-width: 700px; height: 400px;"></div>
   </div>
 </div>
 
-<%= link_to 'Back', [@concert.user, @concert.user.profiles.first], class: 'btn btn-default' %>
+<div class="row space-top">
+  <%= link_to 'Back', [@concert.user, @concert.user.profiles.first], class: 'btn btn-default' %>
 
-<div class="pull-right">
-  <% if current_user && current_user == @concert.user %>
-    <%= link_to 'Edit', edit_user_concert_path(@concert.user, @concert), class: 'btn btn-success' %>
-    <%= link_to 'Delete', [@concert.user, @concert], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure to delete this concert information?' } %>
-  <% end %>
+  <div class="pull-right">
+    <% if current_user && current_user == @concert.user %>
+      <%= link_to 'Edit', edit_user_concert_path(@concert.user, @concert), class: 'btn btn-success' %>
+      <%= link_to 'Delete', [@concert.user, @concert], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure to delete this concert information?' } %>
+    <% end %>
+  </div>
 </div>
+
+<script type="text/javascript">
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+    markers = handler.addMarkers(<%=raw @hash.to_json %>);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+</script>
