ch6-embed-soundcloud-widget: Removed turbolinks, Fixed Google API Key/underscore.js, Added Soundcloud app

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -12,6 +12,10 @@
           <small class="social-btn"><%= render 'list' %></small>
         </h2>
         <p>Jazz Pop Classic</p>
+
+        <div class="soundcloud">
+          <%= raw soundcloud_widget %>
+        </div>
       </div>
     </div> <!-- /.row -->
 
