--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -1,12 +1,10 @@
-
-
 <h2>Nearby concerts</h2>
 <%= form_tag root_path, method: :get do %>
   <%= label_tag :search, nil, class: 'sr-only' %>
-  <%= text_field_tag :search, nil, placeholder: 'Zip Code or City' %>
+  <%= text_field_tag :search, params[:search], placeholder: 'Zip Code or City' %>
   <span> within </span>
   <%= label_tag :miles, nil, class: 'sr-only' %>
-  <%= number_field_tag :miles, nil, in: 0..100, step: 5 %>
+  <%= number_field_tag :miles, params[:miles], in: 0..100, step: 5 %>
   <span> miles </span>
   <%= submit_tag "Search Near", class: 'btn-sm btn-default' %>
 <% end %>
