--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,9 @@
 
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
-              <%= image_tag(user_profile.avatar.sm.url, id: 'photo') if user_profile.avatar? %>
+              <% if user_profile && user_profile.avatar? %>
+                <%= image_tag(user_profile.avatar.sm.url, id: 'photo') %>
+              <% end %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
                 <ul class="dropdown-menu">
