--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="col-md-9">
-
+      <%= render partial: 'tags/form', locals: { f: f, tags: @profile.tags } %>
     </div>
   </div>
 
