--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -1,3 +1,6 @@
+<script src="//maps.google.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>" type="text/javascript"></script>
+<script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
+
 <section id="nearby-concerts-search">
   <h2>Nearby concerts</h2>
   <%= form_tag root_path, method: :get do %>
