--- a/app/views/concerts/new.html.erb
+++ b/app/views/concerts/new.html.erb
@@ -7,8 +7,8 @@
     <%= render 'form' %>
 
     <div class="pull-left">
-      <% if profile = current_user.profiles.first %>
-        <%= link_to 'Back', edit_user_profile_path(current_user, profile), class: 'btn btn-default' %>
+      <% if user_profile %>
+        <%= link_to 'Back', edit_user_profile_path(current_user, user_profile), class: 'btn btn-default' %>
       <% else %>
         <%= link_to 'Back', new_user_profile_path(current_user), class: 'btn btn-default' %>
       <% end %>
