--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,4 +1,5 @@
-
+<script src="//maps.google.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>" type="text/javascript"></script>
+<script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
 
 <div class="row">
   <div class="row alert alert-info">
@@ -10,6 +11,7 @@
     </div>
   </div>
   <div class="col-md-5">
+    <%= render partial: 'tags/list', locals: { tags: @concert.tags } %>
     <h4>
       <%= @concert.location_name %>
       <% if url = @concert.location_url %>
@@ -31,8 +33,6 @@
 </div>
 
 <div class="row space-top">
-  <%= link_to 'Back', [@concert.user, @concert.user.profiles.first], class: 'btn btn-default' %>
-
   <div class="pull-right">
     <% if current_user && current_user == @concert.user %>
       <%= link_to 'Edit', edit_user_concert_path(@concert.user, @concert), class: 'btn btn-success' %>
