--- a/app/views/genres/_list.html.erb
+++ b/app/views/genres/_list.html.erb
@@ -5,7 +5,7 @@
   <% end %>
   <p>
     <% Genre.all.each do |genre| %>
-      <%= link_to genre.name, genre, class: 'btn-sm btn-default' %>
+      <%= link_to genre.name, genre, class: 'btn-sm btn-primary' %>
     <% end %>
   </p>
 </section>
