--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -66,7 +66,7 @@
     <div class="col-md-3">
       <div class="form-group">
         <%= f.label :genre_id, class: 'sr-only' %>
-        <%= select_tag 'profile[genre_id]', options_for_select(genre_list), class: 'form-control' %>
+        <%= select_tag 'profile[genre_id]', options_for_select(genre_list, @profile.genre_id), class: 'form-control' %>
       </div>
     </div>
     <div class="col-md-9">
