--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -31,7 +31,7 @@
       <h3 class="space-top">Concerts Schedule</h3>
       <%= render partial: 'concerts/list', locals: { concerts: current_user.concerts } %>
 
-      <%= link_to 'Add new concert', new_user_concert_path(current_user), class: 'btn btn-success' %>
+      <%= link_to 'Add new concert', new_user_concert_path(current_user), class: 'btn btn-primary' %>
     </div>
   </div> <!-- /.col-md-8 -->
 </div>
