--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,4 +6,9 @@
 
 <%= render partial: 'genres/list' %>
 
+<section id="all-tags">
+  <h2>All Tags</h2>
+  <%= render partial: 'tags/list', locals: { tags: Tag.all } %>
+</section>
+
 <%= render partial: 'concerts/search', locals: { concerts: @concerts } %>
